--- a/index.html
+++ b/index.html
@@ -285,22 +285,27 @@
 <body>
     <div class="container">
         <div class="resume">
-            <!-- Шапка -->
-            <div class="header">
-                <h1>Воробьев Илья</h1>
-                <div class="subtitle">Unity Developer</div>
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <span>illyavorobyov@yandex.ru</span>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fab fa-telegram"></i>
-                        <span>@illyavorobyov</span>
-                    </div>
-                </div>
-            </div>
-            
+<!-- Шапка -->
+<div class="header">
+    <h1>Воробьев Илья</h1>
+    <div class="subtitle">Unity Developer</div>
+    <div class="contact-info">
+        <div class="contact-item">
+            <i class="fas fa-envelope"></i>
+            <span>illyavorobyov@yandex.ru</span>
+            <button class="copy-btn" onclick="copyToClipboard('iilyavorobyov@yandex.ru')">
+                <i class="far fa-copy"></i> Копировать
+            </button>
+        </div>
+        <div class="contact-item">
+            <i class="fab fa-telegram"></i>
+            <span>@illyavorobyov</span>
+            <button class="copy-btn" onclick="copyToClipboard('@iilyavorobyov')">
+                <i class="far fa-copy"></i> Копировать
+            </button>
+        </div>
+    </div>
+</div>            
             <!-- Опыт работы -->
             <div class="section">
                 <h2 class="section-title"><i class="fas fa-briefcase"></i> ОПЫТ РАБОТЫ</h2>
@@ -406,7 +411,7 @@
                     <div class="degree">C# Unity Developer</div>
                 </div>
                 <div class="education-item">
-                    <div class="institution">КНИГУ</div>
+                    <div class="institution">КНИТУ</div>
                     <div class="degree">Менеджмент</div>
                 </div>
             </div>
