--- a/index.html
+++ b/index.html
@@ -328,14 +328,14 @@
             <i class="fas fa-envelope"></i>
             <span>illyavorobyov@yandex.ru</span>
             <button class="copy-btn" onclick="copyToClipboard('iilyavorobyov@yandex.ru')">
-                <i class="far fa-copy"></i> Копировать
+                <i class="far fa-copy"></i>
             </button>
         </div>
         <div class="contact-item">
             <i class="fab fa-telegram"></i>
             <span>@illyavorobyov</span>
             <button class="copy-btn" onclick="copyToClipboard('@iilyavorobyov')">
-                <i class="far fa-copy"></i> Копировать
+                <i class="far fa-copy"></i>
             </button>
         </div>
     </div>
