--- a/index.html
+++ b/index.html
@@ -327,19 +327,19 @@
         <div class="contact-item">
             <i class="fas fa-envelope"></i>
             <span>illyavorobyov@yandex.ru</span>
-            <button class="copy-btn" onclick="copyToClipboard('iilyavorobyov@yandex.ru')">
+            <button class="copy-btn" data-text="illyavorobyov@yandex.ru">
                 <i class="far fa-copy"></i>
             </button>
         </div>
         <div class="contact-item">
             <i class="fab fa-telegram"></i>
             <span>@illyavorobyov</span>
-            <button class="copy-btn" onclick="copyToClipboard('@iilyavorobyov')">
+            <button class="copy-btn" data-text="@illyavorobyov">
                 <i class="far fa-copy"></i>
             </button>
         </div>
     </div>
-</div>            
+</div> 
             <!-- Опыт работы -->
             <div class="section">
                 <h2 class="section-title"><i class="fas fa-briefcase"></i> ОПЫТ РАБОТЫ</h2>
