--- a/index.html
+++ b/index.html
@@ -359,15 +359,15 @@
     <div class="contact-info">
         <div class="contact-item">
             <i class="fas fa-envelope"></i>
-            <span>illyavorobyov@yandex.ru</span>
-            <button class="copy-btn" data-text="illyavorobyov@yandex.ru">
+            <span>iilyavorobyov@yandex.ru</span>
+            <button class="copy-btn" data-text="iilyavorobyov@yandex.ru">
                 <i class="far fa-copy"></i>
             </button>
         </div>
         <div class="contact-item">
             <i class="fab fa-telegram"></i>
-            <span>@illyavorobyov</span>
-            <button class="copy-btn" data-text="@illyavorobyov">
+            <span>@iilyavorobyov</span>
+            <button class="copy-btn" data-text="@iilyavorobyov">
                 <i class="far fa-copy"></i>
             </button>
         </div>
