--- a/index.html
+++ b/index.html
@@ -389,10 +389,16 @@
                         <h3>Металлический шторм</h3>
                         <p class="project-description">Командный проект, игра в жанре tower defense</p>
                         <div class="project-links">
-                            <a href="https://github.com/ilyavorobyov/TowerDefenseTeamProject" class="btn github">
+                            <a href="https://github.com/ilyavorobyov/TowerDefenseTeamProject"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/464846" class="btn yandex">
+                            <a href="https://yandex.ru/games/app/464846"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn yandex">
                                 <i class="fas fa-gamepad"></i> Яндекс.Игры
                             </a>
                         </div>
@@ -403,10 +409,16 @@
                         <h3>Инопланетное сражение с роботами</h3>
                         <p class="project-description">Соло разработка, мидкорный шутер-боевик</p>
                         <div class="project-links">
-                            <a href="https://github.com/ilyavorobyov/ShooterRoguelike" class="btn github">
+                            <a href="https://github.com/ilyavorobyov/ShooterRoguelike"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/416232" class="btn yandex">
+                            <a href="https://yandex.ru/games/app/416232"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn yandex">
                                 <i class="fas fa-gamepad"></i> Яндекс.Игры
                             </a>
                         </div>
@@ -417,10 +429,16 @@
                         <h3>Найтраннер</h3>
                         <p class="project-description">Соло разработка, экшн раннер</p>
                         <div class="project-links">
-                            <a href="https://github.com/ilyavorobyov/CyberpunkGravity" class="btn github">
+                            <a href="https://github.com/ilyavorobyov/CyberpunkGravity" 
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/416245" class="btn yandex">
+                            <a href="https://yandex.ru/games/app/416245"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn yandex">
                                 <i class="fas fa-gamepad"></i> Яндекс.Игры
                             </a>
                         </div>
@@ -431,10 +449,16 @@
                         <h3>Крутящийся шанс</h3>
                         <p class="project-description">Соло-разработанный слот с классическими символами</p>
                         <div class="project-links">
-                            <a href="https://github.com/ilyavorobyov/SimpleSlot" class="btn github">
+                            <a href="https://github.com/ilyavorobyov/SimpleSlot"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/391599" class="btn yandex">
+                            <a href="https://yandex.ru/games/app/391599"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn yandex">
                                 <i class="fas fa-gamepad"></i> Яндекс.Игры
                             </a>
                         </div>
@@ -445,10 +469,16 @@
                         <h3>Фруктовое приключение</h3>
                         <p class="project-description">Соло разработка, платформер-аркада</p>
                         <div class="project-links">
-                            <a href="https://github.com/ilyavorobyov/Banana-Cat" class="btn github">
+                            <a href="https://github.com/ilyavorobyov/Banana-Cat"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/416242" class="btn yandex">
+                            <a href="https://yandex.ru/games/app/416242"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn yandex">
                                 <i class="fas fa-gamepad"></i> Яндекс.Игры
                             </a>
                         </div>
@@ -459,10 +489,16 @@
                         <h3>Побег Енота</h3>
                         <p class="project-description">Соло разработка, платформер-аркада</p>
                         <div class="project-links">
-                            <a href="https://github.com/ilyavorobyov/SSP" class="btn github">
+                            <a href="https://github.com/ilyavorobyov/SSP"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/451379" class="btn yandex">
+                            <a href="https://yandex.ru/games/app/451379"
+                                target="_blank" 
+                                rel="noopener noreferrer"
+                                class="btn yandex">
                                 <i class="fas fa-gamepad"></i> Яндекс.Игры
                             </a>
                         </div>
@@ -565,10 +601,10 @@
                     setTimeout(() => {
                         this.innerHTML = originalHtml;
                         this.classList.remove('copied');
-                    }, 2000);
+                    }, 1000);
                     
                     // Показываем уведомление
-                    showNotification('Скопировано: ' + textToCopy, 'success');
+                    showNotification('Скопировано: ' + 'success');
                 } else {
                     showNotification('Ошибка копирования', 'error');
                 }
