--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                 class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/464846"
+                            <a href="https://yandex.ru/games/app/464846?draft=true&lang=ru"
                                 target="_blank" 
                                 rel="noopener noreferrer"
                                 class="btn yandex">
@@ -415,7 +415,7 @@
                                 class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/416232"
+                            <a href="https://yandex.ru/games/app/416232?draft=true&lang=ru"
                                 target="_blank" 
                                 rel="noopener noreferrer"
                                 class="btn yandex">
@@ -435,7 +435,7 @@
                                 class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/416245"
+                            <a href="https://yandex.ru/games/app/416245?draft=true&lang=ru"
                                 target="_blank" 
                                 rel="noopener noreferrer"
                                 class="btn yandex">
@@ -455,7 +455,7 @@
                                 class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/391599"
+                            <a href="https://yandex.ru/games/app/468538?draft=true&lang=ru"
                                 target="_blank" 
                                 rel="noopener noreferrer"
                                 class="btn yandex">
@@ -475,7 +475,7 @@
                                 class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/416242"
+                            <a href="https://yandex.ru/games/app/416242?draft=true&lang=ru"
                                 target="_blank" 
                                 rel="noopener noreferrer"
                                 class="btn yandex">
@@ -495,7 +495,7 @@
                                 class="btn github">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
-                            <a href="https://yandex.ru/games/app/451379"
+                            <a href="https://yandex.ru/games/app/451379?draft=true&lang=ru"
                                 target="_blank" 
                                 rel="noopener noreferrer"
                                 class="btn yandex">
