--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                     }, 1000);
                     
                     // Показываем уведомление
-                    showNotification('Скопировано!' + 'success');
+                    showNotification('Скопировано!', 'success');
                 } else {
                     showNotification('Ошибка копирования', 'error');
                 }
