--- a/index.html
+++ b/index.html
@@ -395,20 +395,36 @@
 	<div class="container">
 		<div class="resume">
 			<!-- Шапка -->
-			<div class="header">
-				<!-- Добавьте этот блок с фото -->
-				<div class="avatar"> <img src="images/avatar.jpg" alt="Илья Воробьев"> </div>
-				<h1>Воробьев Илья</h1>
-				<div class="subtitle">Unity Developer</div>
-				<div class="contact-info">
-					<div class="contact-item"> <i class="fas fa-envelope"></i> <span>iilyavorobyov@yandex.ru</span>
-						<button class="copy-btn" data-text="iilyavorobyov@yandex.ru"> <i class="far fa-copy"></i> </button>
-					</div>
-					<div class="contact-item"> <i class="fab fa-telegram"></i> <span>@iilyavorobyov</span>
-						<button class="copy-btn" data-text="@iilyavorobyov"> <i class="far fa-copy"></i> </button>
-					</div>
-				</div>
-			</div>
+<!-- Шапка -->
+<div class="header">
+    <!-- Текст слева -->
+    <div class="header-content">
+        <h1>Воробьев Илья</h1>
+        <div class="subtitle">Unity Developer</div>
+        
+        <div class="contact-info">
+            <div class="contact-item">
+                <i class="fas fa-envelope"></i>
+                <span>illyavorobyov@yandex.ru</span>
+                <button class="copy-btn" data-text="illyavorobyov@yandex.ru">
+                    <i class="far fa-copy"></i> Копировать
+                </button>
+            </div>
+            <div class="contact-item">
+                <i class="fab fa-telegram"></i>
+                <span>@illyavorobyov</span>
+                <button class="copy-btn" data-text="@illyavorobyov">
+                    <i class="far fa-copy"></i> Копировать
+                </button>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Фото справа -->
+    <div class="avatar">
+        <img src="images/avatar.jpg" alt="Илья Воробьев">
+    </div>
+</div>
 			<!-- Опыт работы -->
 			<div class="section">
 				<h2 class="section-title"><i class="fas fa-briefcase"></i> ОПЫТ РАБОТЫ</h2>
@@ -549,12 +565,7 @@
 					setTimeout(() => {
 						this.innerHTML = originalHtml;
 						this.classList.remove('copied');
-					}, 1000);
-					// Показываем уведомление
-					showNotification('Скопировано!', 'success');
-				} else {
-					showNotification('Ошибка копирования', 'error');
-				}
+					}, 1500);
 			});
 		});
 	});
