--- a/index.html
+++ b/index.html
@@ -56,24 +56,31 @@
 		}
 	}
 	
-	.header {
-		background: linear-gradient(135deg, var(--dark) 0%, #34495e 100%);
-		color: white;
-		padding: 40px;
-		text-align: center;
-	}
+.header {
+    background: linear-gradient(135deg, var(--dark) 0%, #34495e 100%);
+    color: white;
+    padding: 40px;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    position: relative;
+}
+
+		.header-content {
+    flex: 1;
+}
 	
-	.header h1 {
-		font-size: 2.5em;
-		margin-bottom: 10px;
-		animation: slideIn 0.8s ease;
-	}
+.header h1 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+    animation: slideIn 0.8s ease;
+}
 	
-	.header .subtitle {
-		font-size: 1.3em;
-		opacity: 0.9;
-		animation: slideIn 0.8s ease 0.2s both;
-	}
+.header .subtitle {
+    font-size: 1.3em;
+    opacity: 0.9;
+    animation: slideIn 0.8s ease 0.2s both;
+}
 	
 	@keyframes slideIn {
 		from {
@@ -275,10 +282,21 @@
 		.projects-grid {
 			grid-template-columns: 1fr;
 		}
-		.contact-info {
-			flex-direction: column;
-			align-items: center;
-		}
+		 .header {
+        flex-direction: column-reverse;
+        text-align: center;
+        gap: 20px;
+    }
+    .avatar {
+        width: 120px;
+        height: 120px;
+    }
+.contact-info {
+    display: flex;
+    gap: 30px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+}
 		.contact-item {
 			width: 100%;
 			justify-content: center;
@@ -373,21 +391,21 @@
 		font-size: 1.2em;
 	}
 	
-	.avatar {
-		width: 120px;
-		height: 120px;
-		margin: 0 auto 20px;
-		border-radius: 50%;
-		overflow: hidden;
-		border: 4px solid rgba(255, 255, 255, 0.3);
-		box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-	}
+.avatar {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 4px solid rgba(255,255,255,0.3);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    flex-shrink: 0;
+}
 	
-	.avatar img {
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-	}
+.avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 	</style>
 </head>
 
