--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 				<div class="skills-grid">
 					<div class="skill-category">
 						<h4>Технологии</h4>
-						<div class="skill-items"> <span class="skill-tag">UNITY</span> <span class="skill-tag">C#</span> <span class="skill-tag">GIT</span> <span class="skill-tag">OOP</span> <span class="skill-tag">UNITASK</span> <span class="skill-tag">ZENJECT</span> <span class="skill-tag">SDK</span> <span class="skill-tag">DOTWEEN</span> <span class="skill-tag">PluginYG 2.0</span> <span class="skill-tag">UI TOOLKIT</span> <span class="skill-tag">UniRx</span> </div>
+						<div class="skill-items"> <span class="skill-tag">UNITY</span> <span class="skill-tag">C#</span> <span class="skill-tag">GIT</span> <span class="skill-tag">ООП</span> <span class="skill-tag">SOLID</span> <span class="skill-tag">UNITASK</span> <span class="skill-tag">ZENJECT</span> <span class="skill-tag">SDK</span> <span class="skill-tag">DOTWEEN</span> <span class="skill-tag">PluginYG 2.0</span> <span class="skill-tag">UI TOOLKIT</span> <span class="skill-tag">UniRx</span> </div>
 					</div>
 				</div>
 			</div>
@@ -588,11 +588,11 @@
                     this.innerHTML = '<i class="fas fa-check"></i>'; // Только иконка
                     this.classList.add('copied');
                     
-                    // Восстанавливаем исходный текст через 1.5 секунды
+                    // Восстанавливаем исходный текст через 0.9 секунды
                     setTimeout(() => {
                         this.innerHTML = originalHtml;
                         this.classList.remove('copied');
-                    }, 1500);
+                    }, 900);
                 }
             });
         });
