--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		border-radius: 20px;
 		box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
 		overflow: hidden;
-		margin: 40px 0;
+		margin: 20px 0;
 		animation: fadeIn 0.8s ease;
 	}
 	
@@ -116,7 +116,7 @@
 	}
 	
 	.section {
-		padding: 40px;
+		padding: 30px;
 		border-bottom: 1px solid #eee;
 	}
 	
@@ -241,7 +241,7 @@
 	.skill-items {
 		display: flex;
 		flex-wrap: wrap;
-		gap: 8px;
+		gap: 6px;
 	}
 	
 	.skill-tag {
@@ -277,7 +277,7 @@
 			font-size: 2em;
 		}
 		.section {
-			padding: 30px 20px;
+			padding: 25px 20px;
 		}
 		.projects-grid {
 			grid-template-columns: 1fr;
@@ -518,7 +518,7 @@
 				<h2 class="section-title"><i class="fas fa-code"></i> НАВЫКИ</h2>
 				<div class="skills-grid">
 					<div class="skill-category">
-						<h4>Технологии</h4>
+						<!--<h4>Технологии</h4> -->
 						<div class="skill-items"> <span class="skill-tag">UNITY</span> <span class="skill-tag">C#</span> <span class="skill-tag">GIT</span> <span class="skill-tag">ООП</span> <span class="skill-tag">SOLID</span> <span class="skill-tag">UNITASK</span> <span class="skill-tag">ZENJECT</span> <span class="skill-tag">SDK</span> <span class="skill-tag">DOTWEEN</span> <span class="skill-tag">PluginYG 2.0</span> <span class="skill-tag">UI TOOLKIT</span> <span class="skill-tag">UniRx</span> </div>
 					</div>
 				</div>
