--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Илья Воробьев - Unity Developer</title>
+	<title>Резюме - Unity Developer - Илья Воробьев</title>
+	    <!-- Фавикон (добавьте эту строку) -->
+    <link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	<style>
 	* {
@@ -73,8 +75,8 @@
 }
 	
 .header h1 {
-    font-size: 2.2em;
-    margin-bottom: 10px;
+    font-size: 1.8em;
+    margin-bottom: 8px;
     animation: slideIn 0.8s ease;
 }
 	
