--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@
 	}
 	
 	.project-card h3 {
-		color: var(--dark);
-		margin-bottom: 10px;
-		font-size: 1.1em;
+    	white-space: nowrap;
+    	overflow: hidden;
+    	width: 100%;
+    	font-size: clamp(14px, 3.5vw, 1.3em);
+    	line-height: 1.3;
 	}
 	
 	.project-description {
