--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 	
 	.project-card h3 {
     	white-space: nowrap;
-    	overflow: hidden;
+    	overflow: visible;
     	width: 100%;
-    	font-size: clamp(14px, 3.5vw, 1.3em);
+    	font-size: clamp(12px, 3.5vw, 1.3em);
     	line-height: 1.3;
 	}
 	
