--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 	}
 	
 	.project-card h3 {
-    	white-space: nowrap;
-    	overflow: visible;
-    	width: 100%;
-    	font-size: clamp(8px, 3vw, 1.3em);
-    	line-height: 1.3;
+    	font-size: 1.1em;           
+    	white-space: normal;        
+    	height: auto;               
+    	line-height: 1.4;
+    	margin-bottom: 10px;
 	}
 	
 	.project-description {
