--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	}
 	
 	:root {
-		--primary: #b794f4;
-		--secondary: #805ad5;
+		--primary: #90cdf4;
+		--secondary: #63b3ed;
 		--accent: #ff6b6b;
 		--dark: #2c3e50;
 		--light: #f8f9fa;
