--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	}
 	
 	:root {
-		--primary: #90cdf4;
-		--secondary: #63b3ed;
+		--primary: #bee3f8;
+		--secondary: #90cdf4;
 		--accent: #ff6b6b;
 		--dark: #2c3e50;
 		--light: #f8f9fa;
