--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		--secondary: #764ba2;
 		--accent: #ff6b6b;
 		--dark: #2c3e50;
-		--light: #f8f9fa;
+		--light: #dae0e5;
 		--text: #333;
 	}
 	
@@ -171,7 +171,7 @@
 		background: var(--light);
 		border-radius: 12px;
 		padding: 15px;
-		border-left: 4px solid var(--primary);
+		/* border-left: 4px solid var(--primary); */
 		transition: all 0.3s ease;
 		animation: fadeIn 0.6s ease;
 		display: flex;
@@ -467,7 +467,7 @@
 			<div class="section">
 				<h2 class="section-title"><i class="fas fa-briefcase"></i> ОПЫТ РАБОТЫ</h2>
 				<div class="experience-item">
-					<div class="company">AGAVA/ЯЮниор - Unity developer</div>
+					<div class="company">AGAVA - Unity developer</div>
 					<div class="period">04/2024-08/2025</div>
 				</div>
 							</div>
