--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Резюме - Unity Developer - Илья Воробьев</title>
-	    <!-- Фавикон (добавьте эту строку) -->
+	    <!-- Фавикон -->
     <link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	<style>
@@ -20,7 +20,7 @@
 		--secondary: #764ba2;
 		--accent: #ff6b6b;
 		--dark: #2c3e50;
-		--light: #dae0e5;
+		--light: #e9eff4;
 		--text: #333;
 	}
 	
@@ -165,6 +165,8 @@
 		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 		gap: 15px;
 		margin-top: 20px;
+		padding-left: 10px;
+    	padding-right: 10px;
 	}
 	
 	.project-card {
@@ -290,6 +292,8 @@
 		}
 		.projects-grid {
 			grid-template-columns: 1fr;
+			padding-left: 10px;
+    		padding-right: 10px;
 		}
 		 .header {
         flex-direction: column-reverse;
