--- a/index.html
+++ b/index.html
@@ -485,7 +485,10 @@
 					</div>
 				</div>
 			</div>
-				<h3 style="margin: 30px 0 20px 0; color: var(--dark);">Мои проекты:</h3>
+				<h3 style="margin: 30px 0 20px 20px; color: var(--dark);">
+    				<i class="fas fa-gamepad" style="color: var(--primary); margin-right: 10px;"></i>
+    				МОИ ПРОЕКТЫ:
+				</h3>
 				<div class="projects-grid">
 					<!-- Проект 1 -->
 					<div class="project-card">
