--- a/index.html
+++ b/index.html
@@ -443,7 +443,6 @@
     <div class="container">
       <div class="resume">
         <!-- Шапка -->
-        <!-- Шапка -->
         <div class="header">
           <!-- Текст слева -->
           <div class="header-content">
@@ -473,11 +472,12 @@
             <img src="images/avatar.jpg" alt="Илья Воробьев" />
           </div>
         </div>
-		<!-- Вступление -->
+        <!-- Вступление -->
         <div class="section">
           <h2 class="section-title">
             <i class="fas fa-handshake"></i> Открыт к предложениям
           </h2>
+        </div>
         <!-- Опыт работы -->
         <div class="section">
           <h2 class="section-title">
