The page has been translated into English

--- a/en.html
+++ b/en.html
@@ -447,7 +447,7 @@
         <div class="header">
           <!-- Текст слева -->
           <div class="header-content">
-            <h1>Воробьев Илья</h1>
+            <h1>Ilya Vorobyov</h1>
             <div class="subtitle">Unity Developer</div>
 
             <div class="contact-info">
@@ -476,13 +476,13 @@
         <!-- Вступление -->
         <div class="section">
           <h2 class="section-title">
-            <i class="fas fa-handshake"></i> Открыт к предложениям
+            <i class="fas fa-handshake"></i> Open to offers
           </h2>
         </div>
         <!-- Опыт работы -->
         <div class="section">
           <h2 class="section-title">
-            <i class="fas fa-briefcase"></i> ОПЫТ РАБОТЫ
+            <i class="fas fa-briefcase"></i> WORK EXPERIENCE
           </h2>
           <div class="experience-item">
             <div class="company">AGAVA - Unity developer</div>
@@ -517,15 +517,13 @@
             class="fas fa-gamepad"
             style="color: var(--primary); margin-right: 10px"
           ></i>
-          МОИ ПРОЕКТЫ:
+          MY PROJECTS:
         </h3>
         <div class="projects-grid">
           <!-- Проект 1 -->
           <div class="project-card">
-            <h3>Металлический шторм</h3>
-            <p class="project-description">
-              Командный проект, игра в жанре tower defense
-            </p>
+            <h3>Metal Storm</h3>
+            <p class="project-description">Team project, tower defense game</p>
             <div class="project-links">
               <a
                 href="https://github.com/ilyavorobyov/TowerDefenseTeamProject"
@@ -541,15 +539,15 @@
                 rel="noopener noreferrer"
                 class="btn yandex"
               >
-                <i class="fas fa-gamepad"></i> Яндекс.Игры
+                <i class="fas fa-gamepad"></i> Yandex Games
               </a>
             </div>
           </div>
           <!-- Проект 2 -->
           <div class="project-card">
-            <h3>Инопланетное сражение с роботами</h3>
+            <h3>Alien Battle with Robots</h3>
             <p class="project-description">
-              Соло разработка, мидкорный шутер-боевик
+              Solo development, midcore shooter action game
             </p>
             <div class="project-links">
               <a
@@ -566,14 +564,14 @@
                 rel="noopener noreferrer"
                 class="btn yandex"
               >
-                <i class="fas fa-gamepad"></i> Яндекс.Игры
+                <i class="fas fa-gamepad"></i> Yandex Games
               </a>
             </div>
           </div>
           <!-- Проект 3 -->
           <div class="project-card">
-            <h3>Найтраннер</h3>
-            <p class="project-description">Соло разработка, экшн раннер</p>
+            <h3>Nightrunner</h3>
+            <p class="project-description">Solo development, action runner</p>
             <div class="project-links">
               <a
                 href="https://github.com/ilyavorobyov/CyberpunkGravity"
@@ -589,15 +587,15 @@
                 rel="noopener noreferrer"
                 class="btn yandex"
               >
-                <i class="fas fa-gamepad"></i> Яндекс.Игры
+                <i class="fas fa-gamepad"></i> Yandex Games
               </a>
             </div>
           </div>
           <!-- Проект 4 -->
           <div class="project-card">
-            <h3>Крутящийся шанс</h3>
+            <h3>Spinning Chance</h3>
             <p class="project-description">
-              Соло-разработанный слот с классическими символами
+              Solo-developed slot with classic symbols
             </p>
             <div class="project-links">
               <a
@@ -614,15 +612,15 @@
                 rel="noopener noreferrer"
                 class="btn yandex"
               >
-                <i class="fas fa-gamepad"></i> Яндекс.Игры
+                <i class="fas fa-gamepad"></i> Yandex Games
               </a>
             </div>
           </div>
           <!-- Проект 5 -->
           <div class="project-card">
-            <h3>Фруктовое приключение</h3>
+            <h3>Fruit Adventure</h3>
             <p class="project-description">
-              Соло разработка, платформер-аркада
+              Solo development, platformer arcade
             </p>
             <div class="project-links">
               <a
@@ -639,15 +637,15 @@
                 rel="noopener noreferrer"
                 class="btn yandex"
               >
-                <i class="fas fa-gamepad"></i> Яндекс.Игры
+                <i class="fas fa-gamepad"></i> Yandex Games
               </a>
             </div>
           </div>
           <!-- Проект 6 -->
           <div class="project-card">
-            <h3>Побег Енота</h3>
+            <h3>Raccoon Escape</h3>
             <p class="project-description">
-              Соло разработка, платформер-аркада
+              Solo development, platformer arcade
             </p>
             <div class="project-links">
               <a
@@ -664,7 +662,7 @@
                 rel="noopener noreferrer"
                 class="btn yandex"
               >
-                <i class="fas fa-gamepad"></i> Яндекс.Игры
+                <i class="fas fa-gamepad"></i> Yandex Games
               </a>
             </div>
           </div>
@@ -672,22 +670,24 @@
         <!-- Образование -->
         <div class="section">
           <h2 class="section-title">
-            <i class="fas fa-graduation-cap"></i> ОБРАЗОВАНИЕ
+            <i class="fas fa-graduation-cap"></i> EDUCATION
           </h2>
           <div class="education-item">
-            <div class="institution">ЯЮниор</div>
+            <div class="institution">IJunior</div>
             <div class="degree">C# Unity Developer</div>
           </div>
           <div class="education-item">
-            <div class="institution">КНИТУ</div>
-            <div class="degree">Менеджмент</div>
+            <div class="institution">KNITU</div>
+            <div class="degree">Management</div>
           </div>
         </div>
         <!-- Языки -->
         <div class="section">
-          <h2 class="section-title"><i class="fas fa-language"></i> ЯЗЫКИ</h2>
+          <h2 class="section-title">
+            <i class="fas fa-language"></i> LANGUAGES
+          </h2>
           <div class="language-item">
-            <div style="font-weight: 600; margin-bottom: 10px">Английский</div>
+            <div style="font-weight: 600; margin-bottom: 10px">English</div>
             <div class="language-level"><span>B1</span></div>
           </div>
         </div>
