--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Вступление -->
         <div class="section">
           <h2 class="section-title">
-            <i class="fas fa-handshake"></i> Открыт к предложениям:
+            <i class="fas fa-handshake"></i> Открыт к предложениям
           </h2>
           <div class="introduction">
             Unity Developer с 2-летним опытом. Ищу удаленную или гибридную
