A GitHub link button has been added to the top of the page.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
                   <i class="far fa-copy"></i>
                 </button>
               </div>
+              <a
+                href="https://github.com/ilyavorobyov"
+                target="_blank"
+                rel="noopener noreferrer"
+                style="text-decoration: none; color: inherit"
+              >
+                <div class="contact-item" style="cursor: pointer">
+                  <i class="fab fa-github"></i>
+                  <span>GitHub</span>
+                </div>
+              </a>
             </div>
           </div>
 
