contact buttons have been changed

--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@
             <i class="fas fa-handshake"></i> Открыт к предложениям
           </h2>
           <div class="introduction">
-            Unity Developer с 2-летним опытом. Ищу удаленную или гибридную
-            работу. Открыт к постоянной и проектной занятости
+            <p>
+              Unity Developer с 2-летним опытом и 6+ опубликованными проектами.
+              Специализируюсь на полном цикле разработки - от идеи до
+              публикации. Ищу удаленную или гибридную работу. Открыт к
+              постоянной и проектной занятости.
+            </p>
           </div>
         </div>
         <!-- Опыт работы -->
