--- a/en.html
+++ b/en.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Резюме - Unity Developer - Илья Воробьев</title>
+    <title>Resume - Unity Developer - Ilya Vorobyov</title>
     <!-- Фавикон -->
     <link rel="icon" href="images/favicon.ico" />
     <link
@@ -63,8 +63,10 @@
             <i class="fas fa-handshake"></i> Open to offers
           </h2>
           <div class="introduction">
-            Unity Developer with 2 years of experience. Seeking remote or hybrid
-            position. Available for both full-time and contract work.
+            Unity Developer with 2 years of experience and 6+ published
+            projects. Expertise in full-cycle game development from concept to
+            store publication. Seeking remote or hybrid position. Available for
+            both full-time and contract work.
           </div>
         </div>
         <!-- Опыт работы -->
